<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global -->
    <string name="appName">Dinérico</string>
    <string name="continues">Siguiente</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="sorrySomethingWasWrong">Lo sentimos, algo no salío
        bien</string>

    <!-- Home -->
    <string name="createAccount">Crear cuenta</string>
    <string name="login">Iniciar sesión</string>
    <string name="appDes1">Gestiona </string>
    <string name="appDes2">tu negocio desde </string>
    <string name="appDes3">la palma de tu mano </string>
    <string name="appDes4">y empieza a aceptar</string>
    <string name="appDes5">dinero eletrónico</string>
    <string name="signUpyou">Regístrate</string>

    <!-- Login -->
    <string name="loginDes">Inicia sesión</string>
    <string name="emailAddress">Dirección correo electrónico</string>
    <string name="logout">Cerrar sesión</string>
    <string name="autenticationFailed">El usuario o la contraseña
        ingresada no es correcta</string>

    <!-- Sign up -->
    <string name="signUp">Registrar</string>
    <string name="signUpDe">Regístro</string>
    <string name="signUpDes">Regístrate y</string>
    <string name="signUpDes2">crea tu cuenta</string>
    <string name="ruc">R.U.C</string>
    <string name="numeroCelular">Número de teléfono celular</string>
    <string name="claveFacturacionElectronica">Clave para facturación electrónica</string>
    <string name="email">Correo electrónico</string>
    <string name="initials">Contraseña</string>
    <string name="noValidRUC">El RUC ingresado no es válido</string>
    <string name="noValidEmail">El correo ingresado no es válido</string>
    <string name="noValidMobilePhone">El número de celular ingresado no es
        válido</string>
    <string name="noValidPassword">La contraseña ingresada no es
        válida</string>
    <string name="passwordSevenChar">La contraseña debe tener como mínimo 7
        caracteres</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="accountWithSameEmail">Existe una cuenta con el mismo correo
        electrónico</string>
    <string name="noValidInvoiceKey">La clave de facturación ingresada no
        es válida</string>

    <!-- Shop -->
    <string name="search">Buscar</string>
    <string name="actualSale">Venta Actual</string>
    <string name="addDess">Pulsa \'Editar\' para añadir productos a tu
        lista</string>
    <string name="edit">Editar</string>
    <string name="myProducts">Mis Productos</string>

    <!-- Contributor -->
    <string name="confirm">Confirmar</string>
    <string name="contributorDes">Confirma la información</string>
    <string name="contributorDes2">de tu negocio</string>
    <string name="razonSocial">Razón Social:</string>
    <string name="commercialName">Nombre Comercial:</string>
    <string name="economicActivity">Actividad Económica Principal:</string>
    <string name="noValidCommercialName">El nombre comercial ingresado
        no es válido</string>

    <!-- Store -->
    <string name="storeDes1">Elige el establecimiento que </string>
    <string name="storeDes2">deseas operar</string>
    <string name="storeList">TUS ESTABLECIMIENTOS REGISTRADOS</string>
    <string name="address">Dirección</string>
    <string name="localNumber">Establecimiento: </string>

    <!-- Tittle -->
    <string name="validationErrorTittle">Datos incorrectos</string>

    <!-- Product -->
    <string name="noValidProductName">El nombre del producto  no es
        válido</string>
    <string name="noValidPrice">El precio ingresado no es válido</string>
    <string name="saveChanges">Guardar Cambios</string>
    <string name="saved">¡Guardado!</string>
    <string name="delete">Eliminar Producto</string>
    <string name="add">Añadir</string>
    <string name="name">Nombre</string>
    <string name="editImage">Editar Imagen</string>
    <string name="setUpProduct">Configuración de Producto</string>
    <string name="iva">I.V.A.</string>

    <!-- Product Image -->
    <string name="options_to_image">Opciones para imagen</string>

    <string-array name="image_options">
        <item>Elegir de mis fotos</item>
        <item>Tomar foto ahora</item>
    </string-array>

    <!-- Cart -->
    <string name="theBillIs">La cuenta es</string>
    <string name="deleteSale">Borrar venta</string>
    <string name="chargeAmount">COBRAR %1$s</string>
    <string name="tax">Impuesto</string>
    <string name="tax12">%12</string>
    <string name="total">TOTAL</string>
    <string name="actualSales">Venta Actual</string>

    <!-- Payment -->
    <string name="paymentTypeDes1">¿Qué forma de pago</string>
    <string name="paymentTypeDes2">vas a recibir?</string>
    <string name="cash">Efectivo</string>
    <string name="electronicMoney">Dinero electrónico</string>
    <string name="creditCard">Tarjeta de crédito</string>

    <!-- Customer Data -->
    <string name="customerDataDes1">Introduce los datos</string>
    <string name="customerDataDes2">del cliente</string>
    <string name="charge">Cobrar</string>
    <string name="identificacion">Cédula</string>
    <string name="noValidCustomerId">La cédula ingresada no es válida</string>
    <string name="noValidCustomerIdRUC">La cédula o RUC ingresado no es
        válida</string>
    <string name="noValidCustomerName">El nombre ingresado no es válido</string>
    <string name="noValidAddress">La dirección ingresada no es válida</string>
    <string name="noValidTelephone">El teléfono ingresado no es válido</string>
    <string name="pin">PIN</string>
    <string name="enterPin">Ingrese su PIN</string>
    <string name="noValidPin">El pin ingresado no es válido</string>

    <!-- Successfull Sale -->
    <string name="sucessfullSale">¡Venta exitosa!</string>
    <string name="noThanks">¡No gracias!</string>
    <string name="sendReceipt">Enviar comprobante</string>

    <!-- Receipt -->
    <string name="newSale">Venta nueva</string>
    <string name="receiptDes1">Datos para la factura</string>
    <string name="finalConsumer">Consumidor final</string>
    <string name="finalConsumerRUC">9999999999999</string>
    <string name="nameAndLastName">Nombres y apellidos</string>
    <string name="telephoneNumber">Número de teléfono</string>
    <string name="yes">SÍ</string>
    <string name="no">NO</string>
    <string name="rucOrpersonalId">RUC o cédula</string>
    <string name="send">Enviar</string>
    <string name="receiptSent">¡Comprobante enviado!</string>
    <string name="receiptMessageTittle">Facturación electrónica</string>

    <!--Cash-->
    <string name="cashDes">Cantidad en efectivo</string>
    <string name="change">Vuelto:</string>

</resources>
