<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.dinerico.pos.view.SuccessfulSaleActivity">

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/sucess_check"
        android:id="@+id/check"/>

    <TextView
        android:textSize="24sp"
        android:fontFamily="sans-serif-light"
        android:text="@string/sucessfullSale"
        android:layout_marginTop="50dp"
        android:layout_below="@id/check"
        android:id="@+id/textView"
        style="@style/HeaderTittle"/>

    <View
        android:id="@+id/div"
        android:layout_marginTop="50dp"
        style="@style/Divider"
        android:layout_marginRight="@dimen/doubleMargin"
        android:layout_marginLeft="@dimen/doubleMargin"
        android:layout_below="@+id/textView"/>

    <Button
        android:fontFamily="sans-serif-light"
        android:text="@string/sendReceipt"
        android:layout_marginTop="58dp"
        android:layout_below="@id/div"
        style="@style/SilverButtonForm"
        android:id="@+id/sendReceipt"/>

    <Button
        android:fontFamily="sans-serif-light"
        android:text="@string/noThanks"
        android:layout_marginTop="@dimen/margin"
        android:layout_below="@id/sendReceipt"
        style="@style/SilverButtonForm"
        android:id="@+id/noThanks"/>


</RelativeLayout>