<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBackgroud">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.dinerico.pos.view.StoreActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/storeDes"
            android:background="@color/white">

            <TextView
                android:text="@string/storeDes1"
                android:fontFamily="sans-serif-light"
                android:layout_marginTop="29dp"
                style="@style/HeaderTittle"/>

            <TextView
                android:text="@string/storeDes2"
                style="@style/HeaderTittle"
                android:layout_marginBottom="29dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:textSize="11.5sp"
            android:layout_height="35dp"
            android:text="@string/storeList"
            android:textColor="@color/gray"
            android:id="@+id/registeredStores"
            android:layout_below="@+id/storeDes"
            android:paddingLeft="23dp"
            android:paddingRight="23dp"
            android:gravity="center_vertical"
            android:layout_alignParentLeft="true"
            android:drawableEnd="@drawable/check"
            android:drawableRight="@drawable/check"/>

        <View
            android:id="@+id/separator"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="0.378dp"
            android:background="@color/gray"
            android:layout_below="@id/registeredStores"/>

        <LinearLayout
            android:id="@+id/list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/separator">
        </LinearLayout>


    </RelativeLayout>
</ScrollView>