<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grayBackgroud">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/search"
            android:hint="@string/search"
            android:textColorHint="@color/grayHint"
            android:drawableLeft="@drawable/search"
            android:drawablePadding="15dp"
            android:layout_alignRight="@+id/actualSalesButton"
            android:layout_alignEnd="@+id/actualSalesButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@color/white"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:id="@+id/headerList"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:textSize="@dimen/text_size"
            android:drawablePadding="2dp"
            android:drawableLeft="@drawable/arrow_down"
            android:drawableRight="@drawable/arrow_down"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/myProducts"
            android:background="@color/grayBackgroud"
            android:gravity="center"
            android:textColor="@color/grayHint"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/actualSalesButton"
        android:id="@+id/addImage"
        android:gravity="center"
        android:layout_below="@+id/linearLayout"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/addDess"
                android:id="@+id/initials"
                android:gravity="center"
                android:textColor="@color/grayHint"
                android:layout_gravity="center_horizontal"/>


        </LinearLayout>


    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:visibility="invisible"
        android:layout_below="@+id/headerList"
        android:layout_above="@+id/actualSalesButton"/>

</RelativeLayout>