<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grayBackgroud">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/search"
            android:hint="@string/search"
            android:textColorHint="@color/grayText"
            android:drawableLeft="@drawable/search"
            android:drawablePadding="15dp"
            android:layout_alignRight="@+id/actualSalesButton"
            android:layout_alignEnd="@+id/actualSalesButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@color/white"/>
        </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:id="@+id/actualSalesButton"
        android:background="@color/blueButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            android:src="@drawable/canasta"
            android:layout_alignBottom="@+id/businessName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="23dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actualSale"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:id="@+id/businessName"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:text="(0)"
            android:id="@+id/textView4"
            android:textSize="16sp"
            android:layout_alignTop="@+id/businessName"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="23dp"/>


    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/addImage"
        android:gravity="center"
        android:layout_below="@+id/linearLayout"
        android:visibility="visible"
        android:layout_above="@+id/actualSalesButton">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/add"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/addDess"
                android:id="@+id/initials"
                android:gravity="center"
                android:textColor="@color/grayText"
                android:layout_gravity="center_horizontal"/>


            </LinearLayout>


    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout"
        android:layout_above="@+id/actualSalesButton"
        android:visibility="gone"/>

</RelativeLayout>